Implement V4 labels for Mailbox MessagesListItemView.kt and MessagesRecyclerViewAdapter.kt
MAILAND-1502

--- a/app/src/main/res/layout/list_item_mailbox.xml
+++ b/app/src/main/res/layout/list_item_mailbox.xml
@@ -33,8 +33,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/sender_initial_view_margin_end"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/sender_initial_barrier"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/sender_initial_barrier"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Barrier
@@ -42,7 +42,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintLeft_toRightOf="@id/sender_initial_view"
+        app:barrierDirection="end"
+        app:layout_constraintStart_toEndOf="@id/sender_initial_view"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
@@ -51,8 +52,8 @@
         android:layout_width="@dimen/mailbox_list_item_icon_size"
         android:layout_height="@dimen/mailbox_list_item_icon_size"
         android:layout_marginEnd="@dimen/mailbox_list_item_views_margin"
-        app:layout_constraintLeft_toRightOf="@id/sender_initial_barrier"
-        app:layout_constraintRight_toLeftOf="@id/reply_all_image_view"
+        app:layout_constraintStart_toEndOf="@id/sender_initial_barrier"
+        app:layout_constraintEnd_toStartOf="@id/reply_all_image_view"
         app:layout_constraintTop_toTopOf="@id/reply_all_image_view"
         app:layout_constraintBottom_toBottomOf="@id/reply_all_image_view"
         android:src="@drawable/ic_reply"
@@ -64,8 +65,8 @@
         android:layout_width="@dimen/mailbox_list_item_icon_size"
         android:layout_height="@dimen/mailbox_list_item_icon_size"
         android:layout_marginEnd="@dimen/mailbox_list_item_views_margin"
-        app:layout_constraintLeft_toRightOf="@id/reply_image_view"
-        app:layout_constraintRight_toLeftOf="@id/forward_image_view"
+        app:layout_constraintStart_toEndOf="@id/reply_image_view"
+        app:layout_constraintEnd_toStartOf="@id/forward_image_view"
         app:layout_constraintTop_toTopOf="@id/forward_image_view"
         app:layout_constraintBottom_toBottomOf="@id/forward_image_view"
         android:src="@drawable/ic_reply_all"
@@ -77,8 +78,8 @@
         android:layout_width="@dimen/mailbox_list_item_icon_size"
         android:layout_height="@dimen/mailbox_list_item_icon_size"
         android:layout_marginEnd="@dimen/mailbox_list_item_views_margin"
-        app:layout_constraintLeft_toRightOf="@id/reply_all_image_view"
-        app:layout_constraintRight_toLeftOf="@id/draft_image_view"
+        app:layout_constraintStart_toEndOf="@id/reply_all_image_view"
+        app:layout_constraintEnd_toStartOf="@id/draft_image_view"
         app:layout_constraintTop_toTopOf="@id/draft_image_view"
         app:layout_constraintBottom_toBottomOf="@id/draft_image_view"
         android:src="@drawable/ic_forward"
@@ -90,8 +91,8 @@
         android:layout_width="@dimen/mailbox_list_item_icon_size"
         android:layout_height="@dimen/mailbox_list_item_icon_size"
         android:layout_marginEnd="@dimen/mailbox_list_item_views_margin"
-        app:layout_constraintLeft_toRightOf="@id/forward_image_view"
-        app:layout_constraintRight_toLeftOf="@id/sender_text_view"
+        app:layout_constraintStart_toEndOf="@id/forward_image_view"
+        app:layout_constraintEnd_toStartOf="@id/sender_text_view"
         app:layout_constraintTop_toTopOf="@id/sender_text_view"
         app:layout_constraintBottom_toBottomOf="@id/sender_text_view"
         android:src="@drawable/ic_pencil" />
@@ -101,8 +102,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/mailbox_list_item_views_margin"
-        app:layout_constraintLeft_toRightOf="@id/draft_image_view"
-        app:layout_constraintRight_toLeftOf="@id/time_date_text_view"
+        app:layout_constraintStart_toEndOf="@id/draft_image_view"
+        app:layout_constraintEnd_toStartOf="@id/time_date_text_view"
         app:layout_constraintTop_toTopOf="parent"
         android:maxLines="1"
         android:ellipsize="end"
@@ -113,8 +114,8 @@
         android:id="@+id/time_date_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@id/sender_text_view"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toEndOf="@id/sender_text_view"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/sender_text_view"
         app:layout_constraintBottom_toBottomOf="@id/sender_text_view"
         android:textAppearance="@style/Proton.Text.Caption.Weak"
@@ -125,8 +126,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintLeft_toRightOf="@id/sender_initial_barrier"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toEndOf="@id/sender_initial_barrier"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/sender_text_view" />
     
     <ImageView
@@ -134,8 +135,8 @@
         android:layout_width="@dimen/mailbox_list_item_icon_size"
         android:layout_height="@dimen/mailbox_list_item_icon_size"
         android:layout_marginEnd="@dimen/mailbox_list_item_views_margin"
-        app:layout_constraintLeft_toRightOf="@id/sender_initial_barrier"
-        app:layout_constraintRight_toLeftOf="@id/second_location_image_view"
+        app:layout_constraintStart_toEndOf="@id/sender_initial_barrier"
+        app:layout_constraintEnd_toStartOf="@id/second_location_image_view"
         app:layout_constraintTop_toTopOf="@id/second_location_image_view"
         app:layout_constraintBottom_toBottomOf="@id/second_location_image_view"
         app:layout_constraintHorizontal_chainStyle="packed"
@@ -150,8 +151,8 @@
         android:layout_width="@dimen/mailbox_list_item_icon_size"
         android:layout_height="@dimen/mailbox_list_item_icon_size"
         android:layout_marginEnd="@dimen/mailbox_list_item_views_margin"
-        app:layout_constraintLeft_toRightOf="@id/first_location_image_view"
-        app:layout_constraintRight_toLeftOf="@id/third_location_image_view"
+        app:layout_constraintStart_toEndOf="@id/first_location_image_view"
+        app:layout_constraintEnd_toStartOf="@id/third_location_image_view"
         app:layout_constraintTop_toTopOf="@id/third_location_image_view"
         app:layout_constraintBottom_toBottomOf="@id/third_location_image_view"
         app:tint="@color/icon_weak"
@@ -164,8 +165,8 @@
         android:layout_width="@dimen/mailbox_list_item_icon_size"
         android:layout_height="@dimen/mailbox_list_item_icon_size"
         android:layout_marginEnd="@dimen/mailbox_list_item_views_margin"
-        app:layout_constraintLeft_toRightOf="@id/second_location_image_view"
-        app:layout_constraintRight_toLeftOf="@id/subject_text_view"
+        app:layout_constraintStart_toEndOf="@id/second_location_image_view"
+        app:layout_constraintEnd_toStartOf="@id/subject_text_view"
         app:layout_constraintTop_toTopOf="@id/subject_text_view"
         app:layout_constraintBottom_toBottomOf="@id/subject_text_view"
         app:tint="@color/icon_weak"
@@ -177,9 +178,10 @@
         android:id="@+id/subject_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@id/third_location_image_view"
-        app:layout_constraintRight_toLeftOf="@id/messages_number_text_view"
+        app:layout_constraintStart_toEndOf="@id/third_location_image_view"
+        app:layout_constraintEnd_toStartOf="@id/messages_number_text_view"
         app:layout_constraintTop_toBottomOf="@id/first_row_barrier"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constrainedWidth="true"
         android:maxLines="1"
         android:ellipsize="end"
@@ -193,8 +195,8 @@
         android:layout_marginStart="@dimen/mailbox_list_item_views_margin"
         android:paddingHorizontal="@dimen/message_number_view_padding_horizontal"
         android:paddingVertical="@dimen/message_number_view_padding_vertical"
-        app:layout_constraintLeft_toRightOf="@id/subject_text_view"
-        app:layout_constraintRight_toLeftOf="@id/empty_space_view"
+        app:layout_constraintStart_toEndOf="@id/subject_text_view"
+        app:layout_constraintEnd_toStartOf="@id/empty_space_view"
         app:layout_constraintTop_toTopOf="@id/subject_text_view"
         app:layout_constraintBottom_toBottomOf="@id/subject_text_view"
         android:background="@drawable/background_messages_number"
@@ -207,8 +209,8 @@
         android:id="@+id/empty_space_view"
         android:layout_width="@dimen/mailbox_list_item_views_margin"
         android:layout_height="1dp"
-        app:layout_constraintLeft_toRightOf="@id/messages_number_text_view"
-        app:layout_constraintRight_toLeftOf="@id/sending_uploading_progress_bar"
+        app:layout_constraintStart_toEndOf="@id/messages_number_text_view"
+        app:layout_constraintEnd_toStartOf="@id/sending_uploading_progress_bar"
         app:layout_constraintTop_toTopOf="@id/messages_number_text_view"
         app:layout_constraintBottom_toBottomOf="@id/messages_number_text_view" />
 
@@ -216,7 +218,7 @@
         android:id="@+id/sending_uploading_progress_bar"
         android:layout_width="@dimen/mailbox_list_item_icon_size"
         android:layout_height="@dimen/mailbox_list_item_icon_size"
-        app:layout_constraintRight_toLeftOf="@id/attachment_image_view"
+        app:layout_constraintEnd_toStartOf="@id/attachment_image_view"
         app:layout_constraintTop_toTopOf="@id/attachment_image_view"
         app:layout_constraintBottom_toBottomOf="@id/attachment_image_view" />
 
@@ -224,7 +226,7 @@
         android:id="@+id/attachment_image_view"
         android:layout_width="@dimen/mailbox_list_item_icon_size"
         android:layout_height="@dimen/mailbox_list_item_icon_size"
-        app:layout_constraintRight_toLeftOf="@id/star_image_view"
+        app:layout_constraintEnd_toStartOf="@id/star_image_view"
         app:layout_constraintTop_toTopOf="@id/star_image_view"
         app:layout_constraintBottom_toBottomOf="@id/star_image_view"
         android:src="@drawable/ic_paper_clip"
@@ -234,7 +236,7 @@
         android:id="@+id/star_image_view"
         android:layout_width="@dimen/mailbox_list_item_icon_size"
         android:layout_height="@dimen/mailbox_list_item_icon_size"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/subject_text_view"
         app:layout_constraintBottom_toBottomOf="@id/subject_text_view"
         android:src="@drawable/ic_star_filled"
@@ -246,8 +248,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintLeft_toRightOf="@id/sender_initial_barrier"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toEndOf="@id/sender_initial_barrier"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/subject_text_view" />
 
     <ImageView
@@ -256,21 +258,22 @@
         android:layout_height="@dimen/mailbox_list_item_icon_size"
         android:padding="@dimen/mailbox_list_item_expiration_icon_padding"
         android:layout_marginTop="@dimen/mailbox_list_item_views_margin"
-        app:layout_constraintLeft_toRightOf="@id/sender_initial_barrier"
+        app:layout_constraintStart_toEndOf="@id/sender_initial_barrier"
         app:layout_constraintTop_toBottomOf="@id/second_row_barrier"
         android:src="@drawable/ic_hourglass"
         android:background="@drawable/circle_background_interaction_weak" />
 
-    <!-- TODO: Should be replaced in MAILAND-1502 -->
-    <LinearLayout
-        android:id="@+id/labelsLayout"
+    <ch.protonmail.android.ui.view.SingleLineLabelChipGroupView
+        android:id="@+id/mailbox_label_chip_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constrainedWidth="true"
         android:layout_marginTop="@dimen/mailbox_list_item_views_margin"
         android:layout_marginStart="@dimen/mailbox_list_item_views_margin"
         app:layout_goneMarginStart="0dp"
-        app:layout_constraintLeft_toRightOf="@id/expiration_image_view"
+        app:layout_constraintStart_toEndOf="@id/expiration_image_view"
         app:layout_constraintTop_toBottomOf="@id/second_row_barrier"
-        android:orientation="horizontal" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
