--- a/app/src/main/res/layout/layout_message_details_header.xml
+++ b/app/src/main/res/layout/layout_message_details_header.xml
@@ -209,7 +209,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="@id/senderInitialView"
         app:layout_constraintRight_toRightOf="@id/senderInitialView"
-        app:layout_constraintTop_toTopOf="@+id/labelsCollapsedGroupView"
+        app:layout_constraintTop_toTopOf="@+id/labelsExpandedGroupView"
         android:src="@drawable/ic_label"
         app:tint="@color/icon_weak" />
 
@@ -219,10 +219,17 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/message_details_header_margin_normal"
         app:layout_constraintLeft_toRightOf="@id/senderInitialBarrier"
+        app:layout_constraintTop_toBottomOf="@id/recipientsCollapsedTextView" />
+
+    <ch.protonmail.android.ui.view.MultiLineLabelChipGroupView
+        android:id="@+id/labelsExpandedGroupView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/message_details_header_margin_big"
+        app:layout_constraintStart_toEndOf="@id/senderInitialBarrier"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bccRecipientsExpandedView"
-        android:visibility="gone"
-        tools:layout_height="20dp"
-        tools:visibility="visible" />
+        tools:layout_height="20dp"/>
 
     <ImageView
         android:id="@+id/calendarImageView"
@@ -242,7 +249,7 @@
         android:layout_marginTop="@dimen/message_details_header_margin_big"
         app:layout_constraintLeft_toRightOf="@id/senderInitialBarrier"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/labelsCollapsedGroupView"
+        app:layout_constraintTop_toBottomOf="@+id/labelsExpandedGroupView"
         style="@style/Proton.Text.DefaultSmall.Weak"
         tools:text="2021-01-28 at 10:04 AM" />
 
@@ -328,7 +335,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:constraint_referenced_ids="lockIconTextView, locationImageView,
-        toCollapsedTextView, recipientsCollapsedTextView" />
+        toCollapsedTextView, recipientsCollapsedTextView, labelsCollapsedGroupView"
+        android:visibility="gone"/>
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/expandedHeaderGroup"
@@ -337,6 +345,7 @@
         app:constraint_referenced_ids="senderEmailTextView, lockIconExtendedTextView,
         encryptionInfoTextView, locationExtendedImageView, locationTextView,
         calendarImageView, timeDateExtendedTextView, storageImageView,
-        storageTextView, learnMoreTextView" />
+        storageTextView, learnMoreTextView, labelsExpandedGroupView"
+        tools:visibility="visible"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
