--- a/app/src/main/res/layout/layout_mailbox_status_view.xml
+++ b/app/src/main/res/layout/layout_mailbox_status_view.xml
@@ -33,7 +33,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="Updated Just now"
+        android:text="placeholder"
         style="@style/Proton.Text.Caption.Hint" />
 
     <!-- TODO: The component will likely have to be changed when the feature is implemented -->
@@ -47,7 +47,7 @@
         app:chipMinTouchTargetSize="0dp"
         app:chipStartPadding="0dp"
         app:chipEndPadding="2dp"
-        android:text="4 unread"
+        android:text="placeholder"
         android:checkable="true"
         style="@style/UnreadMessagesStatusChip" />
 
