--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -17,17 +17,44 @@ You should have received a copy of the GNU General Public License
 along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout_contacts_main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:fitsSystemWindows="true"
     tools:context=".contacts.ContactsActivity">
 
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar" />
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar_contacts"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/background_norm"
+        android:translationZ="@dimen/elevation_m">
+
+        <include
+            android:id="@+id/toolbar_contacts"
+            layout="@layout/toolbar" />
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tablayout_contacts"
+            style="@style/CustomTabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="?attr/actionBarSize"
+            app:tabGravity="fill"
+            app:tabIndicatorColor="@color/interaction_strong"
+            app:tabMode="fixed" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <FrameLayout
         android:id="@+id/layout_no_connectivity_info"
@@ -35,33 +62,81 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:layout_height="wrap_content"
         android:layout_below="@id/toolbar" />
 
-    <TextView
-        android:id="@+id/no_results"
+    <RelativeLayout
+        android:id="@+id/progressLayoutView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/toolbar"
-        android:gravity="center"
-        android:text="@string/no_search_results"
-        android:visibility="gone" />
+        android:background="@color/white"
+        android:visibility="gone"
+        tools:visibility="visible">
 
-    <ListView
-        android:id="@+id/contacts_list_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@color/iron_gray"
-        android:dividerHeight="1px"
-        android:layout_below="@id/no_results" />
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/shadow_height"
-        android:layout_below="@id/toolbar"
-        android:background="@drawable/actionbar_shadow" />
+        <ch.protonmail.android.views.CustomFontTextView
+            style="@style/App.Text.Subtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/progress_bar"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/fields_default_space_small"
+            android:gravity="center"
+            android:text="@string/fetching_contacts" />
 
-    <ProgressBar
-        android:id="@+id/progress_bar"
+    </RelativeLayout>
+
+    <!-- TODO: library development has discontinued in 2016 -->
+    <com.github.clans.fab.FloatingActionMenu
+        android:id="@+id/addFab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true" />
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:layout_collapseMode="parallax"
+        app:menu_colorNormal="@color/new_purple"
+        app:menu_colorPressed="@color/dark_purple_statusbar"
+        app:menu_colorRipple="@color/dark_purple_statusbar"
+        app:menu_icon="@drawable/fab_add"
+        app:menu_labels_colorNormal="@color/white"
+        app:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
+        app:menu_labels_position="@integer/fab_label_start"
+        app:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
+        app:menu_labels_showShadow="true"
+        app:menu_labels_singleLine="true"
+        app:menu_labels_textColor="@color/dark_purple"
+        app:menu_labels_textSize="14sp"
+        app:menu_openDirection="up"
+        app:menu_showShadow="true">
 
-</RelativeLayout>
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/addContactItem"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/fab_ic_contact_add_user"
+            app:fab_colorNormal="@color/new_purple"
+            app:fab_colorPressed="@color/dark_purple_statusbar"
+            app:fab_label="@string/fab_add_contact"
+            app:fab_size="mini"
+            app:menu_colorRipple="@color/dark_purple_statusbar"
+            tools:ignore="VectorDrawableCompat" />
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/addContactGroupItem"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/fab_ic_contact_add_group"
+            app:fab_colorNormal="@color/new_purple"
+            app:fab_colorPressed="@color/dark_purple_statusbar"
+            app:fab_label="@string/fab_add_contact_group"
+            app:fab_size="mini"
+            app:menu_colorRipple="@color/dark_purple_statusbar"
+            tools:ignore="VectorDrawableCompat" />
+
+    </com.github.clans.fab.FloatingActionMenu>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
