--- a/app/src/main/res/layout/toolbar_mailbox.xml
+++ b/app/src/main/res/layout/toolbar_mailbox.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2020 Proton Technologies AG
   ~
   ~ This file is part of ProtonMail.
@@ -18,15 +17,14 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<androidx.appcompat.widget.Toolbar
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/background_norm"
     android:minHeight="?attr/actionBarSize"
     android:paddingStart="@dimen/toolbar_padding_start"
     android:paddingEnd="@dimen/toolbar_padding_end"
     app:contentInsetStartWithNavigation="0dp"
     app:navigationIcon="@drawable/ic_hamburger"
-    app:titleTextAppearance="@style/Proton.Text.Headline.Small"
-    android:background="@color/background_norm" />
+    app:titleTextAppearance="@style/Proton.Text.Headline.Small" />
