--- a/app/src/main/res/layout/fragment_message_action_sheet.xml
+++ b/app/src/main/res/layout/fragment_message_action_sheet.xml
@@ -201,7 +201,7 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/padding_xxxxl"/>
+                android:layout_height="@dimen/padding_4xl"/>
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
