--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,9 +22,10 @@
     <!-- region V4 -->
 
     <!-- generic size -->
-    <dimen name="size_icon_m">24dp</dimen>
     <dimen name="size_button_m">48dp</dimen>
-    <dimen name="divider_size">2px</dimen>
+    <dimen name="size_divider">2px</dimen>
+    <dimen name="size_icon_m">24dp</dimen>
+    <dimen name="size_corner_s">16dp</dimen>
 
     <dimen name="unread_messages_chip_size">20dp</dimen>
     <dimen name="message_number_view_padding_horizontal">8dp</dimen>
@@ -37,8 +38,8 @@
     <dimen name="padding_l">16dp</dimen>
     <dimen name="padding_xl">24dp</dimen>
     <dimen name="padding_xxl">32dp</dimen>
-    <dimen name="padding_xxxl">40dp</dimen>
-    <dimen name="padding_xxxxl">48dp</dimen>
+    <dimen name="padding_3xl">40dp</dimen>
+    <dimen name="padding_4xl">48dp</dimen>
 
     <dimen name="elevation_s">2dp</dimen> // standard button low 2dp
     <dimen name="elevation_m">4dp</dimen> // standard app bar 4dp
