Updated main contacts list with new v4 design and some simplifications in the code related.
MAILAND-1403

--- a/app/src/main/res/layout/layout_sender_initial.xml
+++ b/app/src/main/res/layout/layout_sender_initial.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2020 Proton Technologies AG
   ~
   ~ This file is part of ProtonMail.
@@ -18,8 +17,7 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="@dimen/sender_initial_view_size"
@@ -27,22 +25,22 @@
 
     <TextView
         android:id="@+id/senderInitialTextView"
+        style="@style/Proton.Text.DefaultSmall"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/background_sender_initial"
-        android:textAlignment="center"
         android:gravity="center"
-        style="@style/Proton.Text.DefaultSmall"
+        android:textAlignment="center"
         tools:text="S" />
 
     <ImageView
         android:id="@+id/checkImageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="@dimen/sender_initial_view_check_icon_padding"
         android:background="@drawable/selector_selection_mode_background"
+        android:padding="@dimen/sender_initial_view_check_icon_padding"
         android:src="@drawable/selector_selection_mode_icon"
-        app:tint="@color/icon_inverted"
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        app:tint="@color/icon_inverted" />
 
 </FrameLayout>
