--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -99,7 +99,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:layout_collapseMode="parallax"
-        app:menu_colorNormal="@color/new_purple"
+        app:menu_colorNormal="@color/interaction_strong"
         app:menu_colorPressed="@color/dark_purple_statusbar"
         app:menu_colorRipple="@color/dark_purple_statusbar"
         app:menu_icon="@drawable/fab_add"
@@ -119,7 +119,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/fab_ic_contact_add_user"
-            app:fab_colorNormal="@color/new_purple"
+            app:fab_colorNormal="@color/interaction_strong"
             app:fab_colorPressed="@color/dark_purple_statusbar"
             app:fab_label="@string/fab_add_contact"
             app:fab_size="mini"
@@ -131,7 +131,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/fab_ic_contact_add_group"
-            app:fab_colorNormal="@color/new_purple"
+            app:fab_colorNormal="@color/interaction_strong"
             app:fab_colorPressed="@color/dark_purple_statusbar"
             app:fab_label="@string/fab_add_contact_group"
             app:fab_size="mini"
