--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -489,6 +489,7 @@
         <item name="android:background">@null</item>
         <item name="android:inputType">text|textNoSuggestions|textMultiLine</item>
         <item name="android:textColor">@color/lead_gray</item>
+        <item name="android:lineSpacingExtra">@dimen/padding_m</item>
     </style>
 
     <style name="MessageRecipientListBaseText">
