Selection mode added in ContactsListFragment, removed some old resources.
MAILAND-1403

--- a/app/src/main/res/layout/list_item_contacts.xml
+++ b/app/src/main/res/layout/list_item_contacts.xml
@@ -31,6 +31,8 @@
         android:id="@+id/initials_view_contacts_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
         android:paddingStart="@dimen/padding_l"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
