--- a/app/src/main/res/menu/contacts_menu.xml
+++ b/app/src/main/res/menu/contacts_menu.xml
@@ -41,7 +41,7 @@
 
     <item
         android:id="@+id/action_delete"
-        android:icon="@drawable/ic_menu_delete"
+        android:icon="@drawable/ic_trash"
         android:textCursorDrawable="@null"
         android:title="@string/delete"
         android:visible="false"
