--- a/app/src/main/res/menu/contacts_selection_menu.xml
+++ b/app/src/main/res/menu/contacts_selection_menu.xml
@@ -21,10 +21,11 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 
     <item
         android:id="@+id/delete_contacts"
-        android:icon="@drawable/ic_menu_delete"
+        android:icon="@drawable/ic_trash"
         android:title="@string/delete_selected" />
 
     <item
         android:id="@+id/transform_phone_contacts"
+        android:visible="false"
         android:title="@string/sync_local_contacts" />
 </menu>
