Fix showing label views when the header is expanded/collapsed in message details
The label view should belong in a Group only if the message has labels. When the message doesn't have labels the label views' visibility should be set to GONE, so that additional margin is not shown between the views that are visible.

--- a/app/src/main/res/layout/layout_message_details_header.xml
+++ b/app/src/main/res/layout/layout_message_details_header.xml
@@ -338,8 +338,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:constraint_referenced_ids="lockIconTextView, locationImageView,
-        toCollapsedTextView, recipientsCollapsedTextView, labelsCollapsedGroupView"
-        android:visibility="gone"/>
+        toCollapsedTextView, recipientsCollapsedTextView"
+        tools:visibility="gone"/>
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/expandedHeaderGroup"
@@ -348,7 +348,7 @@
         app:constraint_referenced_ids="senderEmailTextView, lockIconExtendedTextView,
         encryptionInfoTextView, locationExtendedImageView, locationTextView,
         calendarImageView, timeDateExtendedTextView, storageImageView,
-        storageTextView, learnMoreTextView, labelsExpandedGroupView"
+        storageTextView, learnMoreTextView"
         tools:visibility="visible"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
