--- a/app/src/main/res/layout/cv_contact_avatar.xml
+++ b/app/src/main/res/layout/cv_contact_avatar.xml
@@ -20,15 +20,15 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="@dimen/image_width"
-    android:layout_height="@dimen/image_width"
+    android:layout_width="@dimen/avatar_size"
+    android:layout_height="@dimen/avatar_size"
     android:background="@android:color/transparent"
     android:layout_gravity="center">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/photoCardViewWrapper"
-        android:layout_width="@dimen/image_width"
-        android:layout_height="@dimen/image_width"
+        android:layout_width="@dimen/avatar_size"
+        android:layout_height="@dimen/avatar_size"
         android:layout_gravity="center"
         app:cardElevation="0dp"
         android:background="@android:color/transparent"
@@ -36,8 +36,8 @@
 
         <ch.protonmail.android.views.CustomFontTextView
             android:id="@+id/contactInitials"
-            android:layout_width="@dimen/image_width"
-            android:layout_height="@dimen/image_width"
+            android:layout_width="@dimen/avatar_size"
+            android:layout_height="@dimen/avatar_size"
             android:maxLines="1"
             android:minLines="1"
             android:hyphenationFrequency="none"
@@ -47,8 +47,8 @@
 
         <ImageView
             android:id="@+id/contactImage"
-            android:layout_width="@dimen/image_width"
-            android:layout_height="@dimen/image_width"
+            android:layout_width="@dimen/avatar_size"
+            android:layout_height="@dimen/avatar_size"
             android:layout_gravity="center"
             android:scaleType="centerCrop"
             tools:ignore="ContentDescription" />
